[package]
name = "backit"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
dirs-next = "2.0.0"
futures-util = "0.3.31"
git2 = "0.20.2"
indicatif = "0.17.11"
inquire = "0.7.5"
json = "0.12.4"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
zstd = "0.13.3"
